--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,9 @@ poethepoet = "^0.16.4"
 
 [tool.poe.tasks]
 installPoetry = "poetry install"
-installGdown = "pip install gdown"
 check = "python3.8 -m compileall olivapp/"
+installGdown = "pip install gdown"
+getInformes ="gdown --folder 1WzypEZh_fa3ZNmTZ4_KMfGVAbuBO95xR -O informes"
 
 
 [build-system]
