--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,10 +14,12 @@ poethepoet = "^0.16.4"
 
 [tool.poe.tasks]
 installPoetry = "poetry install"
+installPytest = "pip install pytest"
+installAssertpy = "pip install assertpy"
 check = "python3.8 -m compileall olivapp/"
 installGdown = "pip install gdown"
 getInformes ="gdown --folder 1WzypEZh_fa3ZNmTZ4_KMfGVAbuBO95xR -O informes"
-
+test = "pytest-3"
 
 [build-system]
 requires = ["poetry-core"]
