--- a/iv.yaml
+++ b/iv.yaml
@@ -1,7 +1,10 @@
-lenguaje: python-3.10
-entidad: 
+lenguaje: python
+entidad:
   - models/predictor.py
+
 automatizar:
   fichero: pyproject.toml
   orden: poe
-test: tests/test_OlivApp.py
+  
+test: 
+  - tests/test_OlivApp.py
